# ProjetTuteure

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
doc/: FunctionList.odt  Projet.sql  ProjetEN.sql
docs/: DOXYFILE  FunctionList.odt  data.js
gui/: gui.qrc  index.html
html/: graph_legend.html  index.html  navtreedata.js
include/dao/: Question.hpp
include/persistence/: DAO.hpp  DAOFactory.hpp  Exception.hpp  Tables.hpp  Tests.hpp
include/persistence/SQLite/: DAO.hpp  DAOFactory.hpp  Exceptions.hpp  Tests.hpp
include/presentation/: MainWindow.hpp
include/semantics/calculation/: CalculService.hpp  Calculation.hpp  SimpleGraph.hpp
include/semantics/core/: Answer.hpp  Choice.hpp  ClosedAnswer.hpp  ClosedQuestion.hpp  Data.hpp  DataServices.hpp  Form.hpp  OpenedAnswer.hpp  OpenedQuestion.hpp  Question.cpp  Question.hpp  Reply.cpp  Server.hpp  Services.hpp  Subject.hpp  UIServices.hpp  WebSocketClientWrapper.hpp  WebSocketTransport.hpp  chatserver.h
include/semantics/core/Tests/: DataTests.hpp
page/: index.html
page/js/: app.js
src/: CMakeLists.txt  main.cpp
src/persistence/: CMakeLists.txt  DAOFactory.cpp  Tables.cpp  Tests.cpp
src/persistence/SQLite/: CMakeLists.txt  DAO.cpp  DAOFactory.cpp  Exceptions.cpp  Tests.cpp  init.sql  init_db.sql  init_tests.sql  sqlite.qrc
src/presentation/: CMakeLists.txt  MainWindow.cpp
src/presentation/ui/: CMakeLists.txt  README.md  index.html  package-lock.json  package.json  ui.qrc
src/presentation/ui/src/: App.vue  main.js
src/presentation/ui/src/assets/js/: GGChart.js  qwebchannel.js  services.js
src/presentation/ui/src/components/: AnswerClosedQuestion.vue  AnswerForm.vue  AnswerOpenedQuestion.vue  EditClosedQuestion.vue  EditForm.vue  EditOpenedQuestion.vue  Graph.vue  ListForm.vue  ListSubject.vue
src/presentation/ui/src/router/: index.js
src/semantics/: CMakeLists.txt
src/semantics/calculation/: Calculation.cpp  SimpleGraph.cpp
src/semantics/core/: CMakeLists.txt  CalculServices.cpp  Choice.cpp  Data.cpp  DataServices.cpp  Form.cpp  Question.cpp  Reply.hpp  Server.cpp  Services.cpp  Subject.cpp  UIServices.cpp  WebSocketClientWrapper.cpp  WebSocketTransport.cpp  chatserver.cpp
src/semantics/core/Tests/: CMakeLists.txt  DataTests.cpp
